fixing rag